# crew_chain

./: README.md  crew.py  docker-compose.yml  install_with_uv.sh  pyproject.toml  report.md  requirements.txt  run.bat  run.sh
data/historical/: bitcoin_sample.csv
examples/: mcp_tools_demo.py  run_evaluate.sh  sandbox_trading_demo.py  strategy_comparison.json
src/crew_chain/: cli.py  crew.py  crypto_trading_crew.py  crypto_trading_main.py  main.py
src/crew_chain/cli/: evaluate.py
src/crew_chain/config/: crypto_agents.yaml  crypto_tasks.yaml  mcp_servers.json
src/crew_chain/tools/: advanced_sentiment_tools.py  agent_sandbox_trading.py  crypto_tools.py  deep_search_tools.py  investment_validation_tools.py  mcp_integration.py  mcp_kafka_connector.py  neural_prediction_tools.py  recurring_operations.py  sandbox_trading.py
src/mcp_api/: app.py  requirements.txt
