[project]
name = "crew_chain"
version = "0.1.0"
description = "crew_chain using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
crew_chain = "crew_chain.main:run"
run_crew = "crew_chain.main:run"
train = "crew_chain.main:train"
replay = "crew_chain.main:replay"
test = "crew_chain.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
